--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -1,66 +1,323 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+ /* http://meyerweb.com/eric/tools/css/reset/ v2.020110126 License: none (public domain)*/
+                                                                                
+ html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+margin: 0;
+padding: 0;
+border: 0;
+font-size: 100%;
+font: inherit;
+vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+display: block;
 }
+
 body {
-	line-height: 1;
+line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+content: '';
+content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+border-collapse: collapse;
+border-spacing: 0;
 }
-
 /* Set every element's box-sizing to border-box */
+
 * {
-    box-sizing: border-box;
+box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+html,
+body {
+height: 100%;
+font-family: 'Titillium Web', sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: 'Bangers', cursive;
-    letter-spacing: 1px;
-    margin-bottom: 15px;
+h1,
+h2,
+h3,
+h4,
+h5 {
+font-family: 'Bangers', cursive;
+letter-spacing: 1px;
+margin-bottom: 15px;
 }
-
 /* Your code starts here! */
+
+* {
+box-sizing: border-box;
+padding: 0;
+margin: 0;
+max-width: 100%;
+border: 2px solid black;
+}
+
+
+img {
+max-width: 100%;
+max-height: 100%;
+}
+
+h3 {
+font-style: bold;
+}
+
+nav {
+display: inline-block;
+width: 100%;
+margin-top: 20px;
+text-align: left;
+}
+
+nav ul {
+list-style: none;
+margin: 0 2px;
+padding: 0;
+}
+
+nav li {
+display: inline-block;
+padding: 10px 50px;
+font-size: 15px;
+height: 40px;
+}
+
+nav a {
+text-decoration: none;
+color: grey;
+display: block;
+}
+
+.logo {
+position: absolute;
+height: 40px;
+padding: 0 60px;
+margin: 0px;
+}
+
+.header {
+margin: 10px;
+padding: 20px;
+border-bottom: 1px solid black;
+border-bottom-width: 100%;
+padding: 40px 0 40px;
+}
+
+.header h1 {
+float: left;
+width: 50%;
+text-align: center;
+font-size: 60px;
+padding: 50px;
+}
+
+.header button {
+background-color: white;
+padding: 5px;
+width: 120px;
+border: 1px solid black;
+}
+
+.header img {
+float: left;
+image-orientation: center;
+object-fit: contain;
+}
+
+.header:after{
+content: "";
+display: table;
+clear: both;
+text-align: left; 
+}
+
+.twoColumns {
+    display: inline-block;
+    padding: 40px 0 40px;
+    margin: 0 5px
+}
+
+.features {
+float: left;
+width: 50%;
+}
+
+.about {
+float: left;
+width: 50%;
+}
+
+.twoColumns:after {
+content: "";
+display: table;
+clear: both;
+text-align: left;
+}
+
+.picture img {
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 100%;
+}
+
+.threeColumns {
+    border-bottom: 1px solid black;
+    border-bottom-width: 100%;
+    padding: 40px 0 40px;
+    display: inline-block;
+    margin: 0 50px;
+}
+
+.services {
+float: left;
+width: 33.33%;
+}
+
+.product {
+float: left;
+width: 33.33%;
+}
+
+.vision {
+float: left;
+width: 33.33%;
+}
+
+.threeColumns:after{
+content: "";
+display: table;
+clear: both;
+text-align: left;
+}
+
+footer {
+padding: 20px 0;
+width: 100%;
+text-align: left;
+}
+
+.address {
+font-size: 15px;
+padding: 10px;
+text-align: left;
+}
+
+.address p {
+padding: 10px 0;
+text-align: left;
+}
+
+.copyright {
+text-align: center;
+padding: 10 0;
+}
